--- a/apps/pattern-lab/src/_patterns/02-components/text/-text-display-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/-text-display-variations.twig
@@ -1,7 +1,18 @@
 {% set schema = bolt.data.components['@bolt-components-text'].schema %}
 
-<div style="max-width: 66ch;">
+<bolt-text display="block">
+  This is block display (paragraph).
+</bolt-text>
 
+<bolt-text display="block">
+  This is another block display (paragraph), but the text can also be
+  <bolt-text display="inline" font-style="italic">
+    inline display
+  </bolt-text>
+  so this paragraph has inline text inside a block of text.
+</bolt-text>
+
+{#
   {% set inlineDisplay %}
     {% include "@bolt-components-text/text.twig" with {
       text: "inline display",
@@ -19,5 +30,4 @@
     text: "This is another block display (paragraph), but the text can also be " ~ inlineDisplay ~ " so this paragraph has inline text inside a block of text.",
     display: "block"
   } only %}
-
-</div>
+#}
