--- a/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/05-text.twig
@@ -7,38 +7,59 @@
 <h3>Headlines</h3>
 
 {% set headlines %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the XXXLarge Headline",
-    headline: true,
-    fontSize: "xxxlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the XXLarge Headline",
-    headline: true,
-    fontSize: "xxlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the XLarge Headline",
-    headline: true,
-    fontSize: "xlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the Large Headline",
-    headline: true,
-    fontSize: "large"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the Small Headline",
-    headline: true,
-    fontSize: "small"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the XSmall Headline",
-    headline: true,
-    fontSize: "xsmall",
-    textTransform: "uppercase",
-    letterSpacing: "wide"
-  } only %}
+  <bolt-text headline font-size="xxxlarge">
+    This Is the XXXLarge Headline
+  </bolt-text>
+  <bolt-text headline font-size="xxlarge">
+    This Is the XXLarge Headline
+  </bolt-text>
+  <bolt-text headline font-size="xlarge">
+    This Is the XLarge Headline
+  </bolt-text>
+  <bolt-text headline font-size="large">
+    This Is the Large Headline
+  </bolt-text>
+  <bolt-text headline font-size="small">
+    This Is the Small Headline
+  </bolt-text>
+  <bolt-text headline font-size="xsmall" text-transform="uppercase" letter-spacing="wide">
+    This Is the XSmall Headline
+  </bolt-text>
+
+  {# Twig equivalents
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XXXLarge Headline",
+      headline: true,
+      fontSize: "xxxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XXLarge Headline",
+      headline: true,
+      fontSize: "xxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XLarge Headline",
+      headline: true,
+      fontSize: "xlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Large Headline",
+      headline: true,
+      fontSize: "large"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Small Headline",
+      headline: true,
+      fontSize: "small"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XSmall Headline",
+      headline: true,
+      fontSize: "xsmall",
+      textTransform: "uppercase",
+      letterSpacing: "wide"
+    } only %}
+  #}
 {% endset %}
 
 <figure class="u-bolt-margin-bottom-medium">
@@ -54,21 +75,33 @@
 <h3>Subheadlines</h3>
 
 {% set subheadlines %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the XXLarge Subheadline",
-    subheadline: true,
-    fontSize: "xxlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the XLarge Subheadline",
-    subheadline: true,
-    fontSize: "xlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the Large Subheadline",
-    subheadline: true,
-    fontSize: "large"
-  } only %}
+  <bolt-text subheadline font-size="xxlarge">
+    This Is the XXLarge Subheadline
+  </bolt-text>
+  <bolt-text subheadline font-size="xlarge">
+    This Is the XLarge Subheadline
+  </bolt-text>
+  <bolt-text subheadline font-size="large">
+    This Is the Large Subheadline
+  </bolt-text>
+
+  {# Twig equivalents
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XXLarge Subheadline",
+      subheadline: true,
+      fontSize: "xxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the XLarge Subheadline",
+      subheadline: true,
+      fontSize: "xlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Large Subheadline",
+      subheadline: true,
+      fontSize: "large"
+    } only %}
+  #}
 {% endset %}
 
 <figure class="u-bolt-margin-bottom-medium">
@@ -84,10 +117,16 @@
 <h3>Eyebrow</h3>
 
 {% set eyebrow %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This Is the Eyebrow",
-    eyebrow: true
-  } only %}
+  <bolt-text eyebrow>
+    This Is the Eyebrow
+  </bolt-text>
+
+  {# Twig equivalents
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This Is the Eyebrow",
+      eyebrow: true
+    } only %}
+  #}
 {% endset %}
 
 <figure class="u-bolt-margin-bottom-medium">
@@ -103,17 +142,30 @@
 <h3>Paragraph</h3>
 
 {% set paragraph %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This is regular text in a paragraph. You can make a word <em>italic</em> or <strong>bold</strong>, because text can be displayed inline or block."
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "The entire paragraph can be italic.",
-    fontStyle: "italic"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "The entire paragraph can be bold.",
-    fontWeight: "bold"
-  } only %}
+  <bolt-text>
+    This is regular text in a paragraph. You can make a word <em>italic</em> or <strong>bold</strong>, because text can be displayed inline or block.
+  </bolt-text>
+  <bolt-text font-style="italic">
+    The entire paragraph can be italic.
+  </bolt-text>
+  <bolt-text font-weight="bold">
+    The entire paragraph can be bold.
+  </bolt-text>
+
+  {# Twig equivalents
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is regular text in a paragraph. You can make a word <em>italic</em> or <strong>bold</strong>, because text can be displayed inline or block."
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "The entire paragraph can be italic.",
+      fontStyle: "italic"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "The entire paragraph can be bold.",
+      fontWeight: "bold"
+    } only %}
+  #}
+
 {% endset %}
 
 <figure class="u-bolt-margin-bottom-medium">
@@ -129,23 +181,38 @@
 <h3>Example Lockup in Different Themes</h3>
 
 {% set exampleLockup %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This is an eyebrow",
-    eyebrow: true
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This is a headline",
-    headline: true,
-    fontSize: "xxxlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This is a subheadline",
-    subheadline: true,
-    fontSize: "xxlarge"
-  } only %}
-  {% include "@bolt-components-text/text.twig" with {
-    text: "This is regular text, and some lorem ipsum. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante."
-  } only %}
+  <bolt-text eyebrow>
+    This is an eyebrow
+  </bolt-text>
+  <bolt-text headline font-size="xxxlarge">
+    This is a headline
+  </bolt-text>
+  <bolt-text subheadline font-size="xxlarge">
+    This is a subheadline
+  </bolt-text>
+  <bolt-text>
+    This is regular text, and some lorem ipsum. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante.
+  </bolt-text>
+
+  {# Twig equivalents
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is an eyebrow",
+      eyebrow: true
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is a headline",
+      headline: true,
+      fontSize: "xxxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is a subheadline",
+      subheadline: true,
+      fontSize: "xxlarge"
+    } only %}
+    {% include "@bolt-components-text/text.twig" with {
+      text: "This is regular text, and some lorem ipsum. Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante."
+    } only %}
+  #}
 {% endset %}
 
 <figure class="u-bolt-margin-bottom-medium">
