styles: doc headlines and table

--- a/apps/pattern-lab/src/_includes/utils/docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/docs.twig
@@ -12,7 +12,7 @@
     {% if readmeFile %}
       <div class="c-bolt-docs__readme">
         {% include "@bolt/headline.twig" with {
-          size: "xlarge",
+          size: "xxlarge",
           tag: "h2",
           url: "#getting-started",
           text: "Getting Started",
@@ -33,7 +33,7 @@
 
     {% if code %}
       {% include "@bolt/headline.twig" with {
-        size: "xlarge",
+        size: "xxlarge",
         tag: "h2",
         url: "#usage",
         text: "Usage",
@@ -52,7 +52,7 @@
 
     {% if schema and schema.properties %}
       {% include "@bolt/headline.twig" with {
-        size: "xlarge",
+        size: "xxlarge",
         tag: "h2",
         url: "#schema",
         text: "Schema",
@@ -73,7 +73,7 @@
 
     {% if links %}
       {% include "@bolt/headline.twig" with {
-        size: "xlarge",
+        size: "xxlarge",
         tag: "h2",
         url: "#helpful-links",
         text: "Helpful Links",
