fix: align default

--- a/apps/pattern-lab/src/_patterns/02-components/text/-text-display-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/text/-text-display-variations.twig
@@ -17,7 +17,7 @@
     {% include "@bolt-components-text/text.twig" with {
       text: "inline display",
       display: "inline",
-      fontStyle: italic
+      fontStyle: "italic"
     } only %}
   {% endset %}
 
