docs: Set initially active item in nav priority demo (BDS-380)

--- a/apps/pattern-lab/src/_patterns/02-components/nav-priority/00-nav-priority.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/nav-priority/00-nav-priority.twig
@@ -14,7 +14,8 @@
     },
     {
       "text": "Low Code",
-      "url": "link-1-url"
+      "url": "link-1-url",
+      "active": true
     },
     {
       "text": "Multi-dimensional Power",
