--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/30-dropdown-custom-element-demo-collection.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/30-dropdown-custom-element-demo-collection.twig
@@ -125,19 +125,19 @@
       "items": [
         include("@bolt-components-link/link.twig", {
           "text": "Link 1 Text",
-          "url": "#link-1-url"
+          "url": "#"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 2 Text",
-          "url": "#link-2-url"
+          "url": "#"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 3 Text",
-          "url": "#link-3-url"
+          "url": "#"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 4 Text",
-          "url": "#link-4-url"
+          "url": "#"
         }),
       ]
     } %}
@@ -153,19 +153,35 @@
     "items": [
       include("@bolt-components-link/link.twig", {
         "text": "Link 1 Text",
-        "url": "#link-1-url"
+        "url": "#"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 2 Text",
-        "url": "#link-2-url"
+        "url": "#"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 3 Text",
-        "url": "#link-3-url"
+        "url": "#"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 4 Text",
-        "url": "#link-4-url"
+        "url": "#"
+      }),
+      include("@bolt-components-link/link.twig", {
+        "text": "Link 5 Text",
+        "url": "#"
+      }),
+      include("@bolt-components-link/link.twig", {
+        "text": "Link 6 Text",
+        "url": "#"
+      }),
+      include("@bolt-components-link/link.twig", {
+        "text": "Link 7 Text",
+        "url": "#"
+      }),
+      include("@bolt-components-link/link.twig", {
+        "text": "Link 8 Text",
+        "url": "#"
       }),
     ]
   } %}
