--- a/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_header.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_header.scss
@@ -9,7 +9,7 @@
 * 2) Display nav and controls horizontally
 */
 .pl-c-header {
-    // position: fixed;
+    position: relative; // sticky position fallback
     position: sticky;
     position: -webkit-sticky;
     top: 0;
@@ -17,10 +17,13 @@
     z-index: 4;
     display: flex; /* 2 */
     width: 100%;
-    background: $pl-color-black;
+    min-height: 50px;
+    border-bottom: 1px solid #151721;
+    background-color: #242A3B;
     color: $pl-color-gray-50;
     font-family: $pl-font;
     font-size: $pl-font-size-sm;
+    box-shadow: 0 2px 9px rgba(31, 37, 50, .15)
 }
 
 /**
