--- a/packages/styleguidekit-assets-bolt/src/html/partials/controls.twig
+++ b/packages/styleguidekit-assets-bolt/src/html/partials/controls.twig
@@ -1,7 +1,7 @@
 {% verbatim %}
   <form class="pl-c-viewport-size" method="post" action="#">
-    <input type="text" class="pl-c-viewport-size__input" id="pl-size-px" value="---"><label for="pl-size-px" class="pl-c-viewport-size__label">px /</label>
-    <input type="text" class="pl-c-viewport-size__input" id="pl-size-em" value="---"><label for="pl-size-em" class="pl-c-viewport-size__label">em</label>
+    <input type="text" class="pl-c-viewport-size__input" id="pl-size-px" value="---"><label for="pl-size-px" class="pl-c-viewport-size__label">px</label>
+    <!--<input type="text" class="pl-c-viewport-size__input" id="pl-size-em" value="---"><label for="pl-size-em" class="pl-c-viewport-size__label">em</label>-->
   </form><!--end pl-c-viewport-size-->
 
   <ul class="pl-c-size-list">
@@ -59,23 +59,25 @@
 
     </button>
 
-    <ul class="pl-c-tools__list pl-js-acc-panel">
-      <li class="pl-c-tools__item">
-        <button class="pl-c-tools__action pl-js-pattern-info-toggle">Show Pattern Info</button>
-      </li>
-      {{^ ishControlsHide.views-new }}
-      <li class="pl-c-tools__item">
-        <a href="#" class="pl-c-tools__action pl-js-open-new-window" target="_blank">Open In New Window</a>
-      </li>
-      {{/ ishControlsHide.views-new }}
+    <div class="pl-c-tools__list-wrapper pl-js-acc-panel">
+      <ul class="pl-c-tools__list">
+        <li class="pl-c-tools__item">
+          <button class="pl-c-tools__action pl-js-pattern-info-toggle">Show Pattern Info</button>
+        </li>
+        {{^ ishControlsHide.views-new }}
+        <li class="pl-c-tools__item">
+          <a href="#" class="pl-c-tools__action pl-js-open-new-window" target="_blank">Open In New Window</a>
+        </li>
+        {{/ ishControlsHide.views-new }}
 
-      {{^ ishControlsHide.tools-docs }}
-      <li class="pl-c-tools__item">
-        <a href="http://patternlab.io/docs/" class="pl-c-tools__action" target="_blank">Pattern Lab Docs</a>
-      </li>
-      {{/ ishControlsHide.tools-docs }}
+        {{^ ishControlsHide.tools-docs }}
+        <li class="pl-c-tools__item">
+          <a href="http://patternlab.io/docs/" class="pl-c-tools__action" target="_blank">Pattern Lab Docs</a>
+        </li>
+        {{/ ishControlsHide.tools-docs }}
+      </ul>
+    </div>
 
-    </ul>
   </div><!--end pl-c-tools-->
   {{/ ishControlsHide.tools-all }}
 {% endverbatim %}
