--- a/packages/styleguidekit-assets-bolt/src/sass/scss/01-abstracts/_variables.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/01-abstracts/_variables.scss
@@ -39,8 +39,7 @@ $pl-space: 1rem;
 $pl-doublespace: $pl-space*2;
 $pl-pad: 1rem;
 $pl-pad-half: $pl-pad/2;
-// $offset-top: 2rem;
-$offset-top: 0;
+$offset-top: 2rem;
 
 // Breakpoints
 $pl-bp-med: 42em;
