--- a/packages/styleguidekit-assets-bolt/src/sass/scss/02-base/_body.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/02-base/_body.scss
@@ -8,8 +8,11 @@
 * 2) Styled as IDs to avoid collisions with user <body> tag
 */
 .pl-c-body {
-    margin: 0;
-    padding: 0;
-    background: $pl-color-gray-13;
-    -webkit-text-size-adjust: 100%;
+  margin: 0;
+  padding: 0;
+  background: $pl-color-gray-13;
+  -webkit-text-size-adjust: 100%;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
