--- a/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_navigation.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_navigation.scss
@@ -35,6 +35,8 @@
 
     @media all and (min-width: $pl-bp-med) {
         display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
 
@@ -84,6 +86,10 @@
  */
 .pl-c-nav__link {
   display: flex;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
   align-items: center;
   @include linkStyle();
   white-space: normal;
@@ -108,14 +114,14 @@
      * Dropdown caret after accordion handle
      */
     &:after {
-        content: '\25bc';
-        color: $pl-color-trans-white-25;
-        display: inline-block;
-        font-size: 7px;
-        position: relative;
-        top: 1px;
-        right: -2px;
-        transition: all $pl-animate-quick ease-out;
+      content: '\25bc';
+      color: $pl-color-trans-white-25;
+      display: inline-block;
+      font-size: 7px;
+      position: relative;
+      top: 1px;
+      right: -2px;
+      transition: all $pl-animate-quick ease-out;
     }
 
     &:hover, &:focus {
@@ -149,25 +155,27 @@
  *    hang over the header
  */
 .pl-c-nav__sublist {
-    @include listReset();
-
-    @media all and (min-width: $pl-bp-med) {
-        position: absolute;
-        top: 100%; /* 1 */
-        left: 0;
-        min-width: 10rem;
-        overflow: hidden;
-        border-bottom-left-radius: $pl-border-radius-med;
-        border-bottom-right-radius: $pl-border-radius-med;
-    }
+  @include listReset();
+  @media all and (min-width: $pl-bp-med) {
+    position: absolute;
+    top: 100%; /* 1 */
+    left: 0;
+    min-width: 10rem;
+    overflow: hidden;
+    border-bottom-left-radius: $pl-border-radius-med;
+    border-bottom-right-radius: $pl-border-radius-med;
+  }
 }
 
 /**
  * Dropdown sublist
  */
-.pl-c-nav__sublist--dropdown, .pl-c-nav__subsublist--dropdown {
-    @include listReset();
-    @include accordionPanel();
+.pl-c-nav__sublist--dropdown,
+.pl-c-nav__subsublist--dropdown {
+  @include listReset();
+  @include accordionPanel();
+  background-color: #1f2532;
+  transform: translate3d(0, 0, 0);
 }
 
 /**
@@ -175,9 +183,9 @@
  * 1) Set the height to the viewport height minus the height of the header
  */
 .pl-c-nav__sublist--dropdown.pl-is-active {
-    @media all and (min-width: $pl-bp-med) {
-        height: calc(100vh - #{$offset-top}); /* 1 */
-    }
+  @media all and (min-width: $pl-bp-med) {
+    max-height: calc(100vh - #{$offset-top} - 1rem);
+  }
 }
 
 /**
