--- a/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_viewport.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/03-components/_viewport.scss
@@ -13,17 +13,17 @@
 * 1) This wrapper div occupies all remaining viewport space after PL's header
 */
 .pl-c-viewport {
-	display: flex;
-	flex-direction: column;
-	height: 100vh;
-	width: 100%;
-	position: relative;
-	top: $offset-top;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	z-index: 0;
-	overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  width: 100%;
+  position: relative;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 0;
+  overflow: hidden;
 }
 
 /**
@@ -32,12 +32,12 @@
 * used in JS for manual viewport resizing purposes.
 */
 .pl-c-viewport__cover {
-	width: 100%;
-	height: 100%;
-	display: none;
-	position: absolute;
-	z-index: 20;
-	cursor: move;
+  width: 100%;
+  height: 100%;
+  display: none;
+  position: absolute;
+  z-index: 20;
+  cursor: move;
 }
 
 /**
@@ -46,17 +46,27 @@
 *    iframe and the manual resize handle
 */
 .pl-c-viewport__iframe-wrapper {
-	height: 100%;
-	position: relative;
-	margin: 0 auto;
-	flex: 1;
-	-webkit-overflow-scrolling: touch;
-	overflow-y: auto;
-	overflow-x: hidden;
+  height: 100%;
+  position: relative;
+  margin: 0 auto;
+  flex-grow: 0;
+  flex-shrink: 1;
+  flex-basis: auto;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: auto;
+  overflow-x: hidden;
+  display: flex;
+  flex-direction: column;
+  height: auto;
+  height: var(--pl-viewport-height, calc(100vh - 32px));
+  transition: height 0.3s ease;
+  transform: translate3d(0, 0, 0);
+  will-change: height, width;
+  max-width: 100%;
 
-	&.hay-mode {
-		transition: all 40s linear;
-	}
+  &.hay-mode {
+    transition: all 40s linear;
+  }
 }
 
 /**
@@ -64,17 +74,19 @@
 * 1) this is the actual <iframe>
 */
 .pl-c-viewport__iframe {
-	position: absolute;
-	height: 100%;
-	width: 100%;
-	border: 0;
-	padding: 0;
-	margin: 0;
-	top: 0;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: $pl-color-white;
+  position: sticky;
+  width: 100%;
+  border: 0;
+  padding: 0;
+  margin: 0 auto;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: $pl-color-white;
+  min-width: 320px;
+  flex-grow: 1;
+  max-width: 100%;
 
 	/**
     * Hay Mode transition
@@ -91,14 +103,14 @@
 * 1) Container used for manual resizing
 */
 .pl-c-viewport__resizer {
-	position: absolute;
-	right: 0;
-	top: 0;
-	bottom: 0;
-	width: 14px;
-	margin: 0;
-	height: 100%;
-	cursor: ew-resize;
+  position: absolute;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  width: 14px;
+  margin: 0;
+  height: 100%;
+  cursor: ew-resize;
 }
 
 /**
@@ -106,20 +118,20 @@
 * 1) This is the handle that lets the user resize the viewport
 */
 .pl-c-viewport__resizer-handle {
-	margin: 0;
-	width: 100%;
-	height: 100%;
-	background: $pl-color-gray-20;
-	transition: background $pl-animate-quick ease-out;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background: $pl-color-gray-20;
+  transition: background $pl-animate-quick ease-out;
 
-	&:hover {
-		background: $pl-color-gray-50;
-	}
+  &:hover {
+    background: $pl-color-gray-50;
+  }
 
-	&:active {
-		cursor: move;
-		background: $pl-color-gray-70;
-	}
+  &:active {
+    cursor: move;
+    background: $pl-color-gray-70;
+  }
 }
 
 /**
@@ -128,5 +140,5 @@
 *    transition the width of the viewport
 */
 .vp-animate {
-	transition: width 0.8s ease-out;
+  transition: width 0.8s ease-out, height 0.3s ease;
 }
