--- a/packages/styleguidekit-assets-bolt/src/sass/scss/05-themes/_sidebar-theme.scss
+++ b/packages/styleguidekit-assets-bolt/src/sass/scss/05-themes/_sidebar-theme.scss
@@ -9,7 +9,11 @@ $pl-sidebar-width: 14rem; //Define sidebar width for calculating dimensions
     * A theme that places displays the header as a sidebar
     */
     .pl-c-body--theme-sidebar {
-        
+        flex-direction: column;
+
+        @media all and (min-width: $pl-bp-med) {
+          flex-direction: row;
+        }
         /**
         * Header
         * 1) Set width to sidebar width defined above
@@ -18,12 +22,13 @@ $pl-sidebar-width: 14rem; //Define sidebar width for calculating dimensions
         * 4) void bottom border for light theme
         */
         .pl-c-header {
-            width: $pl-sidebar-width; /* 1 */
+            width: $pl-sidebar-width;
+            min-width: 15rem;
             height: 100vh; /* 2 */
             flex-direction: column;  /* 3 */
             border-bottom: 0; /* 4 */
             padding: 1rem;
-            overflow: auto;
+            overflow: visible;
             @include hideScrollBar();
         }
 
@@ -153,17 +158,18 @@ $pl-sidebar-width: 14rem; //Define sidebar width for calculating dimensions
         /**
         * Nav controls
         * 1) Push off of navigation in flex container so
-        *    they appear at the bottom 
+        *    they appear at the bottom
         */
         .pl-c-controls {
             margin-top: auto; /* 1 */
             margin-left: 0;
-            flex-direction: column;
+            flex-direction: row;
+            flex-flow: row wrap;
         }
 
-        .pl-c-size-list {
-            display: none;
-        }
+        // .pl-c-size-list {
+        //     display: none;
+        // }
 
         .pl-c-viewport-size {
             display: none;
@@ -185,9 +191,9 @@ $pl-sidebar-width: 14rem; //Define sidebar width for calculating dimensions
         /**
          * Tools toggle button
          */
-        .pl-c-tools__toggle {
-            display: none;
-        }
+        // .pl-c-tools__toggle {
+        //     display: none;
+        // }
 
         /**
          * Tools list
@@ -211,53 +217,53 @@ $pl-sidebar-width: 14rem; //Define sidebar width for calculating dimensions
         }
 
         /**
-         * Viewport 
+         * Viewport
          * 1) Position viewport (that contains all the content)
-         *    so it fits in remaining available space 
+         *    so it fits in remaining available space
          */
         .pl-c-viewport {
             top: 0; /* 1 */
-            left: $pl-sidebar-width; /* 1 */
+            // left: $pl-sidebar-width; /* 1 */
             width: auto;
         }
 
         /**
          * Iframe wrapper div
-         * 1) Wipe out dynamic resizing functionality for sidebar mode 
+         * 1) Wipe out dynamic resizing functionality for sidebar mode
          */
-        .pl-c-viewport__iframe-wrapper {
-            width: 100% !important; /* 1 */
-        }
+        // .pl-c-viewport__iframe-wrapper {
+        //     width: 100% !important; /* 1 */
+        // }
 
         /**
          * Iframe
-         * 1) Wipe out dynamic resizing  functionality for sidebar mode 
-         *    TODO: revisit to find ways to resize 
+         * 1) Wipe out dynamic resizing  functionality for sidebar mode
+         *    TODO: revisit to find ways to resize
          */
-        .pl-c-viewport__iframe {
-            width: 100% !important; /* 1 */
-        }
+        // .pl-c-viewport__iframe {
+        //     width: 100% !important; /* 1 */
+        // }
 
         /**
-         * Viewport 
+         * Viewport
          * 1) Position viewport (that contains all the content)
-         *    so it fits in remaining available space 
-         *    TODO: revisit to find ways to resize 
+         *    so it fits in remaining available space
+         *    TODO: revisit to find ways to resize
          */
         .pl-c-viewport {
             top: 0; /* 1 */
-            left: $pl-sidebar-width; /* 1 */
+            // left: $pl-sidebar-width; /* 1 */
             width: auto;
         }
 
         /**
-         * Modal 
+         * Modal
          * 1) Position modal (that contains all the content)
-         *    so it fits in remaining available space 
-         *    TODO: revisit to find ways to resize 
+         *    so it fits in remaining available space
+         *    TODO: revisit to find ways to resize
          */
         .pl-c-modal {
-            left: $pl-sidebar-width; /* 1 */
+            // left: $pl-sidebar-width; /* 1 */
             right: 0; /* 1 */
             width: auto;
         }
