chore: update navbar demo to test additional use cases (dead links + extra long title)

--- a/apps/pattern-lab/src/_patterns/02-components/sticky/-15-sticky-with-content-example.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/sticky/-15-sticky-with-content-example.twig
@@ -5,7 +5,7 @@
       "title":
       {
         "tag": "h2",
-        "text": "1st Sticky Navbar",
+        "text": "Pega for Government: Healthcare & Social Programs",
         "icon":
         {
           "name": "marketing-gray"
@@ -22,12 +22,12 @@
           "url": "#section-1"
         },
         {
-          "text": "Section 2",
+          "text": "Section 2 is a lot longer",
           "url": "#section-2"
         },
         {
-          "text": "Section 3",
-          "url": "#section-3"
+          "text": "The constituent experience",
+          "url": "#the-constituent-experience"
         },
         {
           "text": "Section 4",
