fix: use improved check for "display: contents" support in nav (BDS-426)

--- a/packages/components/bolt-nav-priority/nav-priority.scss
+++ b/packages/components/bolt-nav-priority/nav-priority.scss
@@ -13,7 +13,7 @@ bolt-nav-priority {
   flex-shrink: 2; // shrink faster than other components in tight spots
   flex-grow: 0.5; // grow if space is available, but at 1/2 as much as normal
 
-  @supports (display: contents) {
+  @include bolt-if-browser-supports-display-contents {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       &.is-ready {
         display: contents;
@@ -31,7 +31,7 @@ bolt-nav-priority {
 }
 
 .c-bolt-nav-priority {
-  @supports (display: contents) {
+  @include bolt-if-browser-supports-display-contents {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       &.is-ready {
         display: contents;
@@ -122,7 +122,7 @@ bolt-nav-priority {
 }
 
 .c-bolt-nav-priority__primary {
-  @supports (display: contents) {
+  @include bolt-if-browser-supports-display-contents {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       .is-ready & {
         display: contents;
@@ -149,7 +149,7 @@ bolt-nav-priority {
 
 
 
-@supports (display: contents) {
+@include bolt-if-browser-supports-display-contents {
    .c-bolt-nav-priority__show-more {
      @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
        display: contents;
@@ -227,7 +227,7 @@ bolt-nav-priority {
 
 
 
-  @supports (display: contents) {
+  @include bolt-if-browser-supports-display-contents {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       grid-row: 2/span 1;
       grid-column: 1/span 6;
@@ -364,7 +364,7 @@ bolt-nav-priority {
     }
   }
 
-  @supports (display: contents) {
+  @include bolt-if-browser-supports-display-contents {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
       .is-ready & {
         grid-row: 1/span 1;
