refactor: update existing places using the original (no longer working) `bolt-register-element` mixin to use the new `bolt-custom-element` mixin.

--- a/packages/components/bolt-block-list/src/block-list.scss
+++ b/packages/components/bolt-block-list/src/block-list.scss
@@ -5,7 +5,7 @@
 @import '@bolt/core';
 
 // Register Custom Block Element
-@include bolt-register-element('bolt-block-list', 'block');
+@include bolt-custom-element('bolt-block-list', block);
 
 // Styles
 .c-bolt-block-list {
