--- a/packages/components/bolt-ordered-list/ordered-list.scss
+++ b/packages/components/bolt-ordered-list/ordered-list.scss
@@ -26,7 +26,7 @@ $bolt-ordered-list-bullet-bg-color: rgba(bolt-color(gray), 0.2);
 
 
 // Register Custom Block Element
-@include bolt-register-element('bolt-ordered-list', 'block'); /* [1] */
+@include bolt-custom-element('bolt-ordered-list', block);
 
 // Styles
 .c-bolt-ordered-list {
