--- a/packages/components/bolt-unordered-list/src/unordered-list.scss
+++ b/packages/components/bolt-unordered-list/src/unordered-list.scss
@@ -25,7 +25,7 @@ $bolt-unordered-list-bullet-bg-color: var(--bolt-theme-heading, currentColor); /
 
 
 // Register Custom Block Element
-@include bolt-register-element('bolt-unordered-list', 'block'); /* [1] */
+@include bolt-custom-element('bolt-unordered-list', block);
 
 
 // Styles
