fix: revert test swapping out image with logo component in partners-search demo page

--- a/apps/pattern-lab/src/_patterns/04-pages/110-d8-partners/d8-partners-search.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/110-d8-partners/d8-partners-search.twig
@@ -348,8 +348,7 @@
             {% cell "u-bolt-width-1/1 u-bolt-width-1/2@small" %}
               {% include "@bolt-components-card/card.twig" with {
                 "theme": "xlight",
-                "logo": {
-                  ratio: false,
+                "image": {
                   "src": "/pattern-lab/images/content/logos/logo-paypal.svg",
                 },
                 "teaser": {
